TestRepo2/src/objects/Content_Change_Notification__c.object
<CustomObject>
    <fields>
        <fullName>Change_Description__c</fullName>
        <label>Change Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Content_Subscription__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Content Subscription</label>
        <referenceTo>Content_Subscription__c</referenceTo>
        <relationshipLabel>Change Notifications</relationshipLabel>
        <relationshipName>Content_Change_Notifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Version__c</fullName>
        <label>Content Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retry_Count__c</fullName>
        <label>Retry_Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Date__c</fullName>
        <label>Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Change_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Content Change Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Change_Description__c</columns>
        <columns>Content__c</columns>
        <columns>Content_Subscription__c</columns>
        <columns>Content_Version__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Retry_Count__c</columns>
        <columns>Send_Date__c</columns>
        <columns>Status__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Content Change Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Change Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>